# ProfSearch

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  nixpacks.toml  pyproject.toml  railway.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-snapshot.yml  test.yml
config/: default.toml  universities_seed.json
config/seeds/: README.md
docs/: architecture.md
prompts/ade/: corpus-setup.md  install.md
src/profsearch/: __init__.py  assets.py  cli.py  config.py  doctor.py  run_artifacts.py  types.py  workspace.py
src/profsearch/agentic/: __init__.py  backends.py  email_draft.py
src/profsearch/audit/: __init__.py  publications.py
src/profsearch/db/: __init__.py  models.py  session.py  vectors.py
src/profsearch/embedding/: __init__.py  encoder.py
src/profsearch/funding/: __init__.py  client.py
src/profsearch/matching/: __init__.py  candidate_search.py  names.py  scorer.py
src/profsearch/openalex/: __init__.py  client.py
src/profsearch/pipeline/: __init__.py  base.py  orchestrator.py  stage1_universities.py  (+6 more)
tests/: conftest.py  test_agentic.py  test_audit.py  test_config.py  test_embeddings.py  test_encoder.py  test_funding.py  test_matching.py  test_openalex.py  test_pipeline.py  test_prompts.py  test_publications.py  test_scraping.py  test_search.py  test_search_evaluation.py  test_search_scorer.py  test_setup_flows.py  test_web.py
tests/fixtures/: sample_openalex_response.json  sample_roster_page.html
(+34 files in other folders)
