[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profsearch"
version = "0.1.0"
description = "Verified professor discovery and search pipeline for physics-adjacent faculty."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Roshan Chokshi" }
]
keywords = ["professor", "search", "openalex", "academic", "semantic-search", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "click>=8.1",
  "httpx>=0.27",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]
embeddings = [
  "sentence-transformers>=3.0",
  "torch>=2.2",
]
web = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "jinja2>=3.1",
  "python-multipart>=0.0.12",
]

[project.scripts]
profsearch = "profsearch.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
profsearch = [
  "resources/*.toml",
  "resources/*.json",
  "web/static/*",
  "web/templates/*.html",
  "web/templates/partials/*.html",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
